add coil upcoming api pass

--- a/app/src/main/res/layout/item_movie_poster.xml
+++ b/app/src/main/res/layout/item_movie_poster.xml
@@ -7,7 +7,7 @@
         android:layout_height="match_parent">
 
         <ImageView
-            android:id="@+id/view_pager2"
+            android:id="@+id/iv_poster"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:scaleType="fitXY"
