--- a/app/src/main/res/values/text-appearance.xml
+++ b/app/src/main/res/values/text-appearance.xml
@@ -15,7 +15,7 @@
 
     <style name="Text.Light.Poster" parent="Text">
         <item name="android:textColor">@color/color_353442</item>
-        <item name="android:textSize">32sp</item>
+        <item name="android:textSize">22sp</item>
     </style>
 
     <style name="Text.Dark.Poster" parent="Text.Light.Poster">
@@ -30,10 +30,23 @@
         <item name="android:textSize">16sp</item>
     </style>
 
+    <style name="Text.Dark.Item.desc" parent="Text.Dark.Item">
+        <item name="android:textSize">14sp</item>
+        <item name="android:textColor">@color/color_9B9B9B</item>
+    </style>
+
     <style name="Text.Light.Item.desc" parent="Text.Light">
         <item name="android:textSize">14sp</item>
         <item name="android:textColor">@color/color_9B9B9B</item>
     </style>
 
     <dimen name="sp_logo">38sp</dimen>
+
+    <style name="Text.Light.Tag" parent="Text.Light">
+        <item name="android:textSize">22sp</item>
+    </style>
+
+    <style name="Text.Dark.Tag" parent="Text.Dark">
+        <item name="android:textSize">22sp</item>
+    </style>
 </resources>
